--- a/slides/index.html
+++ b/slides/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="deps/reveal.css">
     <link rel="stylesheet" href="deps/black.css">
+    <link rel="stylesheet" href="lib/style.css">
 
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="deps/xcode.css">
@@ -33,14 +34,11 @@
     </div>
 
     <div id="spotlight" class="spotlight">
+      <div class="spotlight-light"></div>
       <div class="spotlight-dimmer spotlight-dimmer-left"></div>
       <div class="spotlight-dimmer spotlight-dimmer-top"></div>
       <div class="spotlight-dimmer spotlight-dimmer-bottom"></div>
       <div class="spotlight-dimmer spotlight-dimmer-right"></div>
-      <div class="spotlight-blur spotlight-blur-left"></div>
-      <div class="spotlight-blur spotlight-blur-top"></div>
-      <div class="spotlight-blur spotlight-blur-bottom"></div>
-      <div class="spotlight-blur spotlight-blur-right"></div>
     </div>
     <link rel="stylesheet" href="lib/spotlight.css">
 
@@ -56,9 +54,6 @@
       // - https://github.com/hakimel/reveal.js#configuration
       // - https://github.com/hakimel/reveal.js#dependencies
       Reveal.initialize({
-        keyboard: {
-          90: (e) => { console.log(e) },
-        },
         dependencies: [
           { src: 'deps/marked.js' },
           { src: 'deps/markdown.js' },
@@ -66,7 +61,6 @@
           { src: 'deps/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
         ]
       });
-
     </script>
   </body>
 </html>
