--- a/slides/index.html
+++ b/slides/index.html
@@ -42,9 +42,13 @@
     </div>
     <link rel="stylesheet" href="lib/spotlight.css">
 
+    <div id="timeline" class="timeline"></div>
+    <link rel="stylesheet" href="lib/timeline.css">
+
     <script src="deps/head.min.js"></script>
     <script src="deps/reveal.js"></script>
     <script src="lib/spotlight.js"></script>
+    <script src="lib/timeline.js"></script>
 
 <style>
 </style>
